soundboard: fix stop button overlapping the toolbar
when scrolling, the label of the stop button was overlapping the upper toolbar. furthermore, it was overflowing on small screens.

--- a/frontend/src/app/soundboard/soundboard.component.scss
+++ b/frontend/src/app/soundboard/soundboard.component.scss
@@ -70,6 +70,14 @@ mat-toolbar.discord-toolbar {
   .filler {
     flex: 1;
   }
+
+  .stop-button {
+    flex-shrink: 0;
+
+    ::ng-deep .mdc-button__label {
+      z-index: unset;
+    }
+  }
 }
 
 mat-toolbar:last-of-type {
